# Diet-Outline-Builder

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: local-ui-code-generation-plan.md  unit-1-monorepo-foundation-code-generation-plan.md  unit-1-monorepo-foundation-functional-design-plan.md  unit-1-monorepo-foundation-nfr-design-plan.md  unit-1-monorepo-foundation-nfr-requirements-plan.md  unit-2-backend-diet-domain-code-generation-plan.md  unit-2-backend-diet-domain-functional-design-plan.md  unit-2-backend-diet-domain-nfr-design-plan.md  unit-2-backend-diet-domain-nfr-requirements-plan.md  unit-3-conversational-langgraph-agent-code-generation-plan.md  unit-4-fastapi-websocket-api-code-generation-plan.md  (+6 more)
aidlc-docs/inception/: workflow-planning.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  graph.py  main.py
apps/api/app/agent/: __init__.py  graph.py  models.py  ollama.py  prompts.py
apps/api/app/domain/: __init__.py  calculator.py  models.py  validation.py
apps/api/app/schemas/: __init__.py  chat.py
apps/api/app/services/: __init__.py  conversation.py
apps/api/tests/: test_agent_graph.py  test_diet_domain.py  test_diet_domain_properties.py  test_diet_graph.py  test_websocket_api.py
apps/web/: next.config.ts  package.json
src/diet_outline_builder/: __init__.py  __main__.py  cli.py  graph.py  web.py
tests/: test_diet_graph.py  test_web_app.py
(+73 files in other folders)
