[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "diet-outline-builder"
version = "0.1.0"
description = "LangGraph-based diet outline calculator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.60",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
diet-builder = "diet_outline_builder.cli:main"
diet-builder-web = "diet_outline_builder.web:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
