[project]
name = "diet-outline-builder-api"
version = "0.1.0"
description = "FastAPI and LangGraph backend for the Diet Outline Builder."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "langgraph>=0.2.60",
    "pydantic>=2.7,<3",
    "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
    "hypothesis>=6,<7",
    "httpx>=0.27,<1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
